deployments/apps/notifiarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifiarr
  namespace: servarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: notifiarr
  template:
    metadata:
      labels:
        app: notifiarr
    spec:
      hostname: talos-notifiarr
      containers:
        - name: notifiarr
          image: golift/notifiarr:0.9.5-cuda
          ports:
            - containerPort: 5454
          volumeMounts:
            - name: config
              mountPath: /config
            - name: machine-id
              mountPath: /etc/machine-id
              subPath: machine-id
              readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: notifiarr-config
        - name: machine-id
          configMap:
            name: notifiarr-machine-id
