deployments/apps/notifiarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifiarr
  namespace: servarr
spec:
  selector:
    app: notifiarr
  ports:
    - port: 5454
      targetPort: 5454
